kubernetes/apps/external/kvm-pve2/resources/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app kvm-pve2
spec:
  hostnames: ["pve2.kvm.${DOMAIN_APP}"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-app-kvm
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 80
